--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   provider: ^6.0.5
   firebase_auth: ^4.10.1
   flutter_spinkit: ^5.2.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
