--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,16 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+
   firebase_database: ^10.2.7
   firebase_core: ^2.17.0
-  provider: ^6.0.5
   firebase_auth: ^4.10.1
+  firebase_storage: ^11.2.8
+
   flutter_spinkit: ^5.2.0
-  shared_preferences: ^2.2.2
+
+  provider: ^6.0.5
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
